# SFMLMiniApp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
App/: CMakeLists.txt
App/src/: main.cpp
Utils/: CMakeLists.txt
Utils/include/Utils/: Functions.h  Logger.h
Utils/src/Utils/: Functions.cpp  Logger.cpp
